--- a/routes/upload.html
+++ b/routes/upload.html
@@ -47,7 +47,7 @@
       <br />
       <input type="submit" value="Upload" />
     </form>
-    <button>Click me!</button>
-    <p></p>
+    <!-- <button>Click me!</button>
+    <p></p> -->
   </body>
 </html>
